Fixing a small spacing UI bug

--- a/src/manager-app/notes-app/components/NotesForm/NotesForm.module.css
+++ b/src/manager-app/notes-app/components/NotesForm/NotesForm.module.css
@@ -33,16 +33,17 @@
 }
 
 .button {
-  margin-top: 1.5rem;
   border: none;
   border-radius: 1rem;
   padding: 1.5rem;
   color: white;
   font-weight: bold;
   width: 100%;
+  margin-bottom: 1.5rem;
 }
 
 .save {
+  margin-top: 1.5rem;
   background-color: #aa76f8;
 }
 
